Use Class.getConstructor().getInstance().
Rather than JDK11-deprecated Class.getInstance().